desenv_tests/test-assets/field/failure/separator_wrong_usage_2.stderr
error: `separator` modifier cannot be used as list. Usage: `#[desenv(separator = ',')]`
 --> test-assets/field/failure/separator_wrong_usage_2.rs:5:14
  |
5 |     #[desenv(separator(value = ""))]
  |              ^^^^^^^^^
