desenv_tests/test-assets/field/failure/separator_wrong_usage_2.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(separator(value = ""))]
    field: String
}

fn main(){}